--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -67,6 +67,32 @@ params:
       type: object
       required: false
       description: HTML attributes (for example data attributes) to add to the anchor in the footer navigation section.
+- name: contentLicence
+  type: object
+  required: false
+  description: Object containing options for the content licence.
+  params:
+  - name: text
+    type: string
+    required: false
+    description: If `html` is set, this is not required. Text to use within the disclosed part of the details element. If `html` is provided, the `text` option will be ignored. If neither are provided, the Open Government Licence is used.
+  - name: html
+    type: string
+    required: false
+    description: If `text` is set, this is not required. HTML to use within the disclosed part of the details element. If `html` is provided, the `text` option will be ignored. If neither are provided, the Open Government Licence is used.
+- name: copyright
+  type: object
+  required: false
+  description: Object containing options for the copyright notice.
+  params:
+  - name: text
+    type: string
+    required: false
+    description: If `html` is set, this is not required. Text to use within the disclosed part of the details element. If `html` is provided, the `text` option will be ignored. If neither are provided, Crown copyright is used.
+  - name: html
+    type: string
+    required: false
+    description: If `text` is set, this is not required. HTML to use within the disclosed part of the details element. If `html` is provided, the `text` option will be ignored. If neither are provided, Crown copyright is used.
 - name: containerClasses
   type: string
   required: false
@@ -116,6 +142,14 @@ examples:
 - name: default
   data:
     {}
+
+- name: with custom content licence and copyright notice
+  description: Open Government Licence and Crown copyright notice translated into Welsh
+  data:
+    contentLicence:
+      html: 'Mae’r holl gynnwys ar gael dan <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence-cymraeg/version/3/" rel="license">Drwydded y Llywodraeth Agored v3.0</a>, ac eithrio lle nodir yn wahanol'
+    copyright:
+      text: © Hawlfraint y Goron
 
 - name: with meta
   description: Secondary navigation with meta information relating to the site
