Hide character count example

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -233,6 +233,7 @@ examples:
       label:
         text: Can you provide more detail?
   - name: with id with special characters
+    hidden: true
     data:
       id: user1.profile[address]
       name: address
