--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pre-release": "node bin/check-nvmrc.js && ./bin/pre-release.sh",
     "build:package": "node bin/check-nvmrc.js && gulp build:package --destination 'package' && npm run test:build:package",
     "build:dist": "node bin/check-nvmrc.js && gulp build:dist --destination 'dist' && npm run test:build:dist",
-    "test": "npm run test:dependencies && gulp copy-assets && jest --testPathIgnorePatterns='after-*'",
+    "test": "npm run test:dependencies && gulp copy-assets && jest --testPathIgnorePatterns=after-*",
     "test:dependencies": "npm ls --depth=0",
     "test:build:package": "jest tasks/gulp/__tests__/after-build-package.test.js",
     "test:build:dist": "jest tasks/gulp/__tests__/after-build-dist.test.js",
