--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -18,27 +18,27 @@ params:
 - name: hideAllSectionsText
   type: string
   required: false
-  description: The text content of the toggle at the top of the accordion when all sections are expanded. Defaults to 'Hide all sections'.
+  description: The text content of the 'Hide all sections' button at the top of the accordion when at least one section is expanded.
 - name: hideSectionText
   type: string
   required: false
-  description: The text content of the toggle within each section of the accordion, visible when the section is expanded. Defaults to 'Hide'.
+  description: The text content of the 'Hide' button within each section of the accordion, which is visible when the section is expanded.
 - name: hideSectionAriaLabelText
   type: string
   required: false
-  description: Text made available to assistive technologies, like screen-readers, as part of the toggle's accessible name when the section is expanded. Defaults to 'Hide this section'
+  description: Text made available to assistive technologies, like screen-readers, as the final part of the toggle's accessible name when the section is expanded. Defaults to 'Hide this section'.
 - name: showAllSectionsText
   type: string
   required: false
-  description: The text content of the toggle at the top of the accordion when some or all sections are collapsed. Defaults to 'Show all sections'.
+  description: The text content of the 'Show all sections' button at the top of the accordion when all sections are collapsed.
 - name: showSectionText
   type: string
   required: false
-  description: The text content of the toggle within each section of the accordion, visible when the section is collapsed. Defaults to 'Show'.
+  description: The text content of the 'Show' button within each section of the accordion, which is visible when the section is collapsed.
 - name: showSectionAriaLabelText
   type: string
   required: false
-  description: Text made available to assistive technologies, like screen-readers, as part of the toggle's accessible name when the section is collapsed. Defaults to 'Show this section'
+  description: Text made available to assistive technologies, like screen-readers, as the final part of the toggle's accessible name when the section is collapsed. Defaults to 'Show this section'.
 - name: items
   type: array
   required: true
