--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "pretest": "npm run build:compile",
     "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
     "test:screenshots": "node ./tasks/screenshot-components.mjs",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run lint:docs && npm run lint:js && npm run lint:scss",
+    "lint:docs": "npm run lint:docs:cli -- \"**/*.json\"",
+    "lint:docs:cli": "prettier --cache --cache-location .cache/eslint --cache-strategy content --check --ignore-path .lintignore",
     "lint:js": "npm run lint:js:cli -- \"**/*.{cjs,js,mjs}\"",
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .lintignore --max-warnings 0",
     "lint:scss": "npm run lint:scss:cli -- \"{app,src}/**/*.scss\"",
@@ -99,6 +101,7 @@
     "lint-staged": "^13.1.0",
     "magic-string": "^0.27.0",
     "outdent": "^0.8.0",
+    "prettier": "^2.8.3",
     "puppeteer": "^19.5.2",
     "sass-color-helpers": "^2.1.1",
     "standard": "^17.0.0",
