--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,6 +62,10 @@ jobs:
             run: npm run lint:js
             cache: .cache/eslint
 
+          - description: EditorConfig
+            name: lint-editorconfig
+            run: npm run lint:editorconfig
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -70,6 +74,7 @@ jobs:
         uses: ./.github/workflows/actions/install-node
 
       - name: Cache linter
+        if: ${{ matrix.cache }}
         uses: actions/cache@v3
         with:
           key: ${{ matrix.name }}-cache-${{ runner.os }}
