--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "pretest": "npm run build:compile",
     "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
     "test:screenshots": "node ./tasks/screenshot-components.mjs",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run lint:editorconfig && npm run lint:js && npm run lint:scss",
+    "lint:editorconfig": "npm run lint:editorconfig:cli",
+    "lint:editorconfig:cli": "editorconfig-checker",
     "lint:js": "npm run lint:js:cli -- \"**/*.{cjs,js,mjs}\"",
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "lint:scss": "npm run lint:scss:cli -- \"{app,src}/**/*.scss\"",
@@ -81,6 +83,7 @@
     "@percy/sdk-utils": "^1.18.0",
     "babel-jest": "^29.4.2",
     "cheerio": "^1.0.0-rc.12",
+    "editorconfig-checker": "^5.0.1",
     "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-es-x": "^6.0.0",
