--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,6 +66,11 @@ jobs:
             name: lint-editorconfig
             run: npm run lint:editorconfig
 
+          - description: Prettier
+            name: lint-prettier
+            run: npm run lint:prettier
+            cache: .cache/prettier
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
