--- a/.editorconfig
+++ b/.editorconfig
@@ -113,7 +113,7 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[**vendor**]
+[{**package**,**vendor**}]
 indent_size = unset
 indent_style = unset
 charset = unset
