--- a/package.json
+++ b/package.json
@@ -107,5 +107,8 @@
     "stylelint-order": "^6.0.1",
     "vinyl": "^3.0.0",
     "wait-on": "^7.0.1"
+  },
+  "overrides": {
+    "jest-environment-node": "^29.4.0"
   }
 }
