Load `prismjs` and `iframe-resizer` from vendor
As we do with jQuery, we don’t need 3rd party hosting to slow our browser tests down (works offline)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,7 @@ updates:
         update-types: ['version-update:semver-major']
 
       # Always ignore legacy packages
+      - dependency-name: iframe-resizer
       - dependency-name: jquery
       - dependency-name: rollup
 
