--- a/app/package.json
+++ b/app/package.json
@@ -22,12 +22,14 @@
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "3.1.3",
     "html5shiv": "^3.7.3",
+    "iframe-resizer": "3.5.15",
     "jquery": "1.12.4",
     "js-yaml": "^4.1.0",
     "marked": "^4.2.12",
     "minimatch": "^6.1.6",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
+    "prismjs": "^1.29.0",
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
