Make review app serve file stats
Adds a new `/stats` route that'll point to the `public` folder of the `stats` project.
The route uses `express.static` to serve the files themselves, and `serve-index` to provide a folder navigation.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postinstall": "npm ls --depth=0",
     "start": "gulp dev",
     "serve": "npm run serve --workspace app",
-    "heroku": "npm run build:compile && npm start --workspace app",
+    "heroku": "npm run build:compile && npm start --workspace stats && npm start --workspace app",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
