--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "minimatch": "^5.1.1",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
+    "serve-index": "^1.9.1",
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
