--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["**/*.test.*"],
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
-    "target": "ES2015"
+    "target": "ES2015",
+    "types": ["node", "typed-query-selector"]
   }
 }
